<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
    android:id="@+id/etUsername"
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:layout_weight="1"
    android:ems="10"
    android:hint="@string/username"  />
    <EditText
    android:id="@+id/etPassword"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword" />
    <Button
    android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/log_in"   />

    <TextView
        android:id="@+id/tv_register_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:gravity="center"
        android:text="@string/dont_have_account"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/register"   />
</LinearLayout>