<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/reminder_checkoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/completed" />

    <TextView
        android:id="@+id/tv_set_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/reminder_checkoff"
        android:text="@string/reminder_type_label" />

    <Spinner
        android:id="@+id/spinner_reminder_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/tv_set_type"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_set_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_below="@+id/spinner_reminder_type"
        android:text="@string/reminder_name_label" />

    <EditText
        android:id="@+id/reminder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/tv_set_name"
        android:hint="@string/reminder_name_hint" />

    <TextView
        android:id="@+id/tv_set_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/reminder_name"
        android:text="@string/reminder_weekday_label" />

    <Spinner
        android:id="@+id/spinner_reminder_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/tv_set_days"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_vertical"
        android:text="@string/btn_set_reminder"
        android:layout_below="@+id/spinner_reminder_days" />

</RelativeLayout>